# AiSmartGuy

./: .gitattributes  .gitignore  Cargo.toml  README.md  notes to claude.txt
assets/rag_defaults/: 001_fallacies.json  002_weaponized_language.json  006_ambiguous_framing.json  007_racism_intolerance.json  009_nlp_techniques.json
crates/error_system/: Cargo.toml
crates/error_system/src/: classifier.rs  errors.rs  gpu_recovery.rs  lib.rs  logger.rs  partial_run.rs  rag_recovery.rs  recovery.rs  types.rs
crates/integration_tests/: Cargo.toml
crates/integration_tests/src/: lib.rs
crates/integration_tests/tests/: determinism.rs  optimization_orchestrator.rs  pdf_manifest.rs  rag_orchestrator.rs  safety.rs  stress_stability.rs  ui_orchestrator.rs
crates/logging/: Cargo.toml
crates/logging/src/: errors.rs  file_writer.rs  formatter.rs  lib.rs  logger.rs  metrics.rs  types.rs
crates/manifest/: Cargo.toml
crates/manifest/src/: defaults.rs  deserializer.rs  errors.rs  lib.rs  merger.rs  schema.rs  serializer.rs  validator.rs  versioning.rs
crates/model_fetcher/: Cargo.toml
crates/model_fetcher/src/: api.rs  cache.rs  downloader.rs  errors.rs  hf_client.rs  lib.rs  progress.rs  shard_detector.rs  state.rs  types.rs  verifier.rs
crates/model_loader/: Cargo.toml
crates/model_loader/src/: command_builder.rs  errors.rs  gpu_mapper.rs  inferencer.rs  lib.rs  llama_detect.rs  loader.rs  log_callback.rs  process.rs  state_machine.rs  timeout.rs  types.rs
crates/optimization/: Cargo.toml
crates/optimization/src/: aggregator.rs  consensus.rs  errors.rs  lib.rs  mapping.rs  penalties.rs  scoring.rs  state.rs  types.rs
crates/orchestrator/: Cargo.toml
crates/orchestrator/src/: bridge_model_fetcher.rs  errors.rs  fusion.rs  lib.rs  manifest_bridge.rs  optimization_bridge.rs  orchestrator.rs  pdf_bridge.rs  progress.rs  rag_bridge.rs  run_modes.rs  sequence_plan.rs  state_bridge.rs  types.rs
crates/pdf_io/: Cargo.toml
crates/pdf_io/src/: attachment.rs  chapter_detect.rs  chunker.rs  errors.rs  extractor.rs  lib.rs  metadata_embed.rs  metadata_extract.rs  pdf_writer.rs  types.rs
crates/rag_engine/: Cargo.toml
crates/rag_engine/src/: api.rs  errors.rs  hitlist.rs  lib.rs  packet.rs  packet_loader.rs  packet_merger.rs  packet_validator.rs  prompt_builder.rs
crates/ui/: Cargo.toml
crates/ui/src/: api.rs  bridge_manifest.rs  bridge_orchestrator.rs  bridge_pdf.rs  bridge_rag.rs  commands.rs  errors.rs  events.rs  lib.rs  state.rs  types.rs
crates/utils/: Cargo.toml
crates/utils/src/: errors.rs  file.rs  hash.rs  json.rs  lib.rs  os.rs  path.rs  time.rs  types.rs
frontend/: index.html  main.css  splash.css  splash.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
update_packages/: deployment_notes.txt
