[package]
name    = "aismartguy-app"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["wry"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
tokio      = { version = "1", features = ["time", "sync"] }
ureq       = { version = "2" }
zip        = { version = "2", default-features = false, features = ["deflate"] }
manifest      = { path = "../crates/manifest" }
model_loader  = { path = "../crates/model_loader" }
orchestrator  = { path = "../crates/orchestrator" }
pdf_io        = { path = "../crates/pdf_io" }
rag_engine    = { path = "../crates/rag_engine" }
ui            = { path = "../crates/ui" }
