[package]
name = "integration_tests"
version = "0.1.0"
edition = "2021"

[dependencies]
utils          = { path = "../utils" }
logging        = { path = "../logging" }
error_system   = { path = "../error_system" }
manifest       = { path = "../manifest" }
rag_engine     = { path = "../rag_engine" }
pdf_io         = { path = "../pdf_io" }
model_fetcher  = { path = "../model_fetcher" }
model_loader   = { path = "../model_loader" }
optimization   = { path = "../optimization" }
orchestrator   = { path = "../orchestrator" }
ui             = { path = "../ui" }
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
