[package]
name = "model_fetcher"
version = "0.1.0"
edition = "2021"

[dependencies]
utils        = { path = "../utils" }
logging      = { path = "../logging" }
error_system = { path = "../error_system" }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
sha2         = "0.10"
hex          = "0.4"
ureq         = { version = "2", features = ["json"] }
