[package]
name = "orchestrator"
version = "0.1.0"
edition = "2021"

[dependencies]
utils = { path = "../utils" }
logging = { path = "../logging" }
error_system = { path = "../error_system" }
manifest = { path = "../manifest" }
rag_engine = { path = "../rag_engine" }
pdf_io = { path = "../pdf_io" }
model_fetcher = { path = "../model_fetcher" }
model_loader = { path = "../model_loader" }
optimization = { path = "../optimization" }
