[package]
name = "ui"
version = "0.1.0"
edition = "2021"

[dependencies]
utils = { path = "../utils" }
logging = { path = "../logging" }
error_system = { path = "../error_system" }
manifest = { path = "../manifest" }
rag_engine = { path = "../rag_engine" }
pdf_io = { path = "../pdf_io" }
model_fetcher = { path = "../model_fetcher" }
orchestrator = { path = "../orchestrator" }
optimization = { path = "../optimization" }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
base64      = "0.22"
